# HDF5Loader

./: .gitignore  CMakeLists.txt  README.md  aql_out.txt  conanfile.py
.github/workflows/: build.yml
cmake/: HDF5Dependency.cmake  HDF5Utils.cmake  InstallArtifactoryPackage.cmake  MSVCSettings.cmake  aql_multi.json.in  aql_single.json.in
src/: DataContainerInterface.cpp  DataContainerInterface.h  DataTransform.cpp  DataTransform.h  FilterTreeModel.cpp  FilterTreeModel.h  H510XLoader.cpp  H510XLoader.h  H510XLoader.json  H510XLoaderFactory.cpp  H510XLoaderFactory.h  H5ADLoader.cpp  H5ADLoader.h  H5ADLoader.json  H5ADLoaderFactory.cpp  H5ADLoaderFactory.h  H5ADUtils.cpp  H5ADUtils.h  H5Utils.cpp  H5Utils.h  H5Utils2.cpp  H5Utils2.h  HDF5Loader.cpp  HDF5Loader.h  HDF5Loader.json  HDF5LoaderFactory.cpp  HDF5LoaderFactory.h  HDF5_10X_Loader.cpp  HDF5_10X_Loader.h  HDF5_AD_Loader.cpp  HDF5_AD_Loader.h  HDF5_TOME_Loader.cpp  HDF5_TOME_Loader.h  TOMELoader.cpp  TOMELoader.h  TOMELoader.json  TOMELoaderFactory.cpp  TOMELoaderFactory.h  TreeModel.cpp  TreeModel.h  (+1 more)
src/Common/: CMakeLists.txt  DataContainerInterface.cpp  DataContainerInterface.h  DataTransform.h  H5Utils.h  VectorHolder.h
src/H510XLoader/: CMakeLists.txt  H510XLoader.h  H510XLoaderFactory.cpp  H510XLoaderFactory.h  HDF5_10X_Loader.h  PluginInfo.json
src/H5ADLoader/: CMakeLists.txt  H5ADLoader.h  H5ADLoaderFactory.h  HDF5_AD_Loader.cpp  PluginInfo.json
src/TOMELoader/: CMakeLists.txt  HDF5_TOME_Loader.cpp  PluginInfo.json  TOMELoader.h  TOMELoaderFactory.h
